count + icon fix

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "DrinkCounter",
     "version": "1.1.0",
     "orientation": "portrait",
-    "icon": "./assets/favicon.png",
+    "icon": "./assets/splash.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -22,7 +22,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/splash.png",
         "backgroundColor": "#1b1b1b"
       },
       "package": "com.lordrobin.DrinkCounter"
