--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "DrinkCounter",
     "version": "1.1.0",
     "orientation": "portrait",
-    "icon": "./assets/splash.png",
+    "icon": "./assets/adaptive-icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#2b2b2b"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,7 +22,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/splash.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#1b1b1b"
       },
       "package": "com.lordrobin.DrinkCounter"
