--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gorhom/bottom-sheet": "4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~46.0.9",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "react": "18.0.0",
@@ -23,8 +24,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "uuid": "^9.0.0",
-    "expo-splash-screen": "~0.16.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
